# SMEM-MP

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/DummyComponent/: CMakeLists.txt
components/DummyComponent/include/: DummyComponent.h
components/DummyComponent/source/: DummyComponent.c
components/ambiental_module/: CMakeLists.txt
components/ambiental_module/include/: ambiental_module.h
components/ambiental_module/source/: ambiental_module.c
components/ao_core/: CMakeLists.txt  Kconfig.projbuild
components/ao_core/include/: ao_core.h  ao_evt_mpool.h  ao_fsm.h  ao_fsm_watcher.h
components/ao_core/source/: ao_core.c  ao_evt_mpool.c  ao_fsm.c  ao_fsm_watcher.c
components/communication_module/: CMakeLists.txt
components/communication_module/include/: communication_module.h  communication_publisher.h  communication_suscriber.h
components/communication_module/source/: communication_module.c  communication_publisher.c  communication_suscriber.c
components/energy_module/: CMakeLists.txt
components/energy_module/include/: energy_module.h
components/energy_module/source/: energy_module.c
components/i2c_drivers/i2c_ads1115/: CMakeLists.txt
components/i2c_drivers/i2c_pn532/: CMakeLists.txt
components/i2c_mcp23017/: CMakeLists.txt
components/i2c_mcp23017/include/: i2c_mcp23017.h
components/i2c_mgmt_driver/: CMakeLists.txt
components/mqtt_driver/: CMakeLists.txt  Kconfig.projbuild
components/net_driver/: Kconfig.projbuild
components/network_drivers/zigbee_gateway/: CMakeLists.txt  idf_component.yml
components/network_drivers/zigbee_gateway/include/: zigbee_gateway.h
components/network_drivers/zigbee_gateway/source/: zigbee_gateway.c
components/security_module/: CMakeLists.txt  Readme.md
components/sntp_driver/: Kconfig.projbuild
components/time_publisher/: CMakeLists.txt
main/: CMakeLists.txt  SMEM-MP.c
(+39 files in other folders)
